--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 
 .header {
   top: 0;
-  background-color: black;
+  background-color:rgb(21, 10, 26);
   box-shadow: 1px 1px 4px 0 rgba(0, 0, 0, 0.1);
   position: fixed;
   width: 100%;
@@ -22,7 +22,7 @@ body {
   padding: 0;
   list-style: none;
   overflow: hidden;
-  background-color: black;
+  background-color:rgb(21, 10, 26);
 }
 
 .header li a {
@@ -271,7 +271,7 @@ height: 100vh;
 /* The typewriter cursor effect */
 @keyframes blink-caret {
   from, to { border-color: transparent }
-  50% { border-color:blue }
+  50% { border-color:#0004ff; }
 }
 
 .my-4 {
@@ -302,11 +302,14 @@ height: 100vh;
   font-size: 1.3rem;
   font-family: "sofia";
   padding-top: 2rem;
+  padding-bottom: 3rem;
+  background-color: #0004ff;
+  color: #fff;
 }
 
 #about-p::first-letter{
   font-size: 50px;
-  color: #0004ff;
+  color: #f50a0a;
 }
 
 
@@ -396,8 +399,8 @@ textarea{
   cursor: pointer;
 }
 #form-btn:hover{
-  background-color: aquamarine;
-  color: #000;
+  background-color: #f50a0a;
+  color: #fff;
 }
 
 .mb-4{
@@ -601,6 +604,52 @@ footer li {
   }
   .lead{
     padding-top: 1rem;
+  }
+}
+
+@media (min-width:100px) and (max-width:350px){
+  .header {
+    top: 0;
+    background-color:#f50a0a;
+    box-shadow: 1px 1px 4px 0 rgba(0, 0, 0, 0.1);
+    position: fixed;
+    width: 100%;
+    z-index: 3;
+  }
+  
+  .header ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    overflow: hidden;
+    background-color: #f50a0a;
+  }
+  #form-btn{
+    margin: 1rem;
+    width: 100%;
+    height: 60px;
+    background-color: #f50a0a;
+    color: #fff;
+    font-size: 1.3rem;
+    border: none;
+    cursor: pointer;
+  }
+  #form-btn:hover{
+    background-color: #000;
+    color: #fff;
+  }
+  .feature-title{
+    font-size: 1.7rem;
+  }
+  #hey-p {
+    font-family: sofia;
+    font-size: 1.3rem;
+    color: #fff;
+    font-style: italic;
+    margin-top: .5rem;
+  }
+  #address{
+    padding-left: .5rem;
   }
 }
 
