--- a/style.css
+++ b/style.css
@@ -610,7 +610,7 @@ footer li {
 @media only screen and (max-width:480px) and (min-width:320px){
   .header {
     top: 0;
-    background-color:#f50a0a;
+    background-color:rgb(21, 10, 26);
     box-shadow: 1px 1px 4px 0 rgba(0, 0, 0, 0.1);
     position: fixed;
     width: 100%;
@@ -649,7 +649,6 @@ footer li {
     margin-top: .5rem;
   }
   #address{
-    position: absolute;
     margin: 0 auto;
     text-align: center;
     justify-content: center;
